// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Forger Info Delete Block should update forger info after delete block 1`] = `
Object {
  "totalProducedBlocks": 0,
  "totalReceivedFees": 0n,
  "totalReceivedRewards": 0n,
  "votesReceived": Array [
    Object {
      "address": Object {
        "data": Array [
          156,
          171,
          238,
          61,
          39,
          66,
          102,
          118,
          184,
          82,
          206,
          107,
          128,
          76,
          178,
          253,
          255,
          124,
          208,
          181,
        ],
        "type": "Buffer",
      },
      "amount": 0n,
    },
  ],
}
`;

exports[`Forger Info New Block should save forger info after new block 1`] = `
Object {
  "totalProducedBlocks": 1,
  "totalReceivedFees": 0n,
  "totalReceivedRewards": 0n,
  "votesReceived": Array [],
}
`;

exports[`Forger Info New Block should save forger info with received fees if payload included in new block 1`] = `
Object {
  "totalProducedBlocks": 1,
  "totalReceivedFees": 140000n,
  "totalReceivedRewards": 0n,
  "votesReceived": Array [],
}
`;

exports[`Forger Info New Block should save forger info with votes received in new block 1`] = `
Object {
  "totalProducedBlocks": 1,
  "totalReceivedFees": 141000n,
  "totalReceivedRewards": 0n,
  "votesReceived": Array [
    Object {
      "address": Object {
        "data": Array [
          156,
          171,
          238,
          61,
          39,
          66,
          102,
          118,
          184,
          82,
          206,
          107,
          128,
          76,
          178,
          253,
          255,
          124,
          208,
          181,
        ],
        "type": "Buffer",
      },
      "amount": 1000000000n,
    },
  ],
}
`;
